# gattlib_experiment

./: CMakeLists.txt  README.md
EmbeddingPython/: CMakeLists.txt  call_bytearrayclass.c  call_class.c  call_class_test.c  call_function.c  call_thread_2.c  mailSender.py  py_bytearrayclass.py  py_class.py  py_function.py
Socket/: CMakeLists.txt  FakeBluetoothLeSocket.cpp  FakeBluetoothLeSocket.h  FakeSocketInterface.h  main.cpp  main.py
bdaddr/: .gitignore  REAMDE.md
examples/AdafruitNordicUartService/: CMakeLists.txt  README.md  main.c  main.py  py_nusperipheral.py
examples/BluetoothLowEnergySocket/: BluetoothLowEnergyMessage.h  BluetoothLowEnergySocket.cpp  BluetoothLowEnergySocket.h  CMakeLists.txt  GattlibExperimentsSocketInterface.h  main.cpp  start_gdbserver
examples/CentralNordicUartService/: CMakeLists.txt  main.c  start_gdbserver
examples/Connection/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionCallbacks.cpp  main.cpp  start_gdbserver
examples/FakeBluetoothLeSocket/: CMakeLists.txt  DeviceAddress.h  FakeBluetoothLeSocket.cpp  FakeBluetoothLeSocket.h  FakeSocketInterface.h  LinuxUdpClientFake.cpp  LinuxUdpClientFake.h  main.cpp  py_nusperipheral.py
examples/PeripheralNordicUartService/: CMakeLists.txt  FakeSocketInterface.h  main.c  main.py  main_old.c  py_class.py  py_class_b.py  py_nusperipheral.py  py_nusperipheral_b.py
examples/ScanAndConnect/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionCallbacks.cpp  Connector.cpp  Connector.h  ReceiveInterface.h  main.cpp  start_gdbserver
examples/Scanner/: CMakeLists.txt  Scanner.h  (+6 more)
(+22 files in other folders)
